---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
fn f(v) {
  v = 1
  v
}

let v = 0
v = f(v)
v
}

OK
.fn @main
  params 0
  stack 4
  .locals
    f = r1
    v = r2
  .code
  0  lclosure r1, l0   ; f, uv=0
  1  lsmi r2, 0
  2  mov r3, r2
  3  call r2, r1, 1   ; dyn
  4  retv r2

.fn f
  params 1
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 1
  1  retv r1
